objects/Campaign_Tracking_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Tracking History</relationshipLabel>
        <relationshipName>Campaign_Tracking_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Tracking_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Tracking History</label>
    <nameField>
        <label>Campaign Tracking History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Tracking History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>